--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.8" }
     }
   ],
   "routes": [
@@ -12,4 +12,4 @@
       "dest": "main.py"
     }
   ]
-}
+  }
